# powerbi-workflow-automation

./: LICENSE  README.md  main.py  pyproject.toml
scripts/: activity_analyzer.py  data_quality.py  pbi_auth.py  refresh_monitor.py  report_export.py  smart_rerefresh.py  weekly_health.py  workspace_inventory.py  workspace_permissions.py
